--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
   - "2.7"
 install:
   - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install --use-mirrors unittest2; fi
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -r requirements/requirements.txt --use-mirrors
 script: if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then unit2 discover; else python -m unittest discover; fi
